--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "net-bible-api",
   "version": "0.0.1",
   "description": "A Net Bible API wrapper for Node.js, from https://labs.bible.org/api_web_service",
-  "main": "netBible.js",
+  "main": "netBibleAPI.js",
   "scripts": {
     "test": "node tests/apiTest.js"
   },
